--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.5.0",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-pro-sidebar": "^0.7.1",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
@@ -24,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && firebase deploy"
   },
   "eslintConfig": {
     "extends": [
