--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
+    "react-toastify": "^8.2.0",
+    "react-tooltip": "^4.2.21",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
