--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-
-
     "@solana/wallet-adapter-base": "^0.7.0",
     "@solana/wallet-adapter-react": "^0.13.1",
     "@solana/wallet-adapter-react-ui": "^0.6.0",
     "@solana/wallet-adapter-wallets": "^0.11.3",
-
     "@solana/web3.js": "^1.37.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
@@ -21,6 +18,8 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.5.0",
+    "plausible-tracker": "^0.3.8",
+    "rc-pagination": "^3.1.15",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
