--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "firebase": "^9.5.0",
     "plausible-tracker": "^0.3.8",
     "rc-pagination": "^3.1.15",
     "react": "^17.0.2",
@@ -37,8 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && firebase deploy"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
