--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solana-tools",
+  "name": "solana-t-apy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,6 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
-    "plausible-tracker": "^0.3.8",
     "rc-pagination": "^3.1.15",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
